# fair-trec-tools

./: Cargo.toml  README.md  environment.yml
data/: .gitignore
src/: ai2.rs  author.rs  corpus.rs  io.rs  lib.rs  queries.rs
src/subset/sink/: author.rs  mod.rs
