[package]
name = "fair-trec-tools"
version = "0.1.0"
authors = ["Michael Ekstrand <michaelekstrand@boisestate.edu>"]
edition = "2018"

[profile.release]
lto = true

[dependencies]
anyhow = "~1.0"
crossbeam = "~0.7"
csv = "~1.1"
flate2 = "~1.0"
glob = "~0.3"
indicatif = "~0.11"
regex = "~1.1"
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
structopt = "~0.2"
threadpool = "~1.7"
